Fix slider overflow.

--- a/web/pwa/src/global.scss
+++ b/web/pwa/src/global.scss
@@ -95,7 +95,7 @@ ion-item {
     margin: auto;
 }
 
-ion-toggle, ion-range {
+ion-toggle {
     padding-right: 12px;
 }
 
